# latent-coordinate-law-engine

./: .gitignore  README.md  mathgraph_v143_expression_portal_engine.py  mathgraph_v144_portal_grammar_engine.py  mathgraph_v145_semantic_portal_engine.py  mathgraph_v146_semantic_survivorship_engine.py  mathgraph_v147_hidden_world_semantic_discovery_engine.py  mathgraph_v148_discovery_acceleration_engine.py  mathgraph_v149_continuation_kernel_discovery_engine.py  mathgraph_v150_future_volume_engine.py  mathgraph_v151_max_viable_complexity_engine.py  pyproject.toml
a_plus_plus_out/: a_plus_plus_report.md  a_plus_plus_scores.csv  a_plus_plus_summary.json  dataset_sources.json  scientific_rediscovery.csv
a_plus_plus_out_live/: a_plus_plus_report.md  a_plus_plus_scores.csv  a_plus_plus_summary.json  dataset_sources.json  human_comparison.csv  real_dataset_results.csv  unknown_prediction.csv
conclusive_out/: benchmark_report.md  benchmark_summary.json  compression_results.csv  coordinate_invention_probe.json  coordinate_rankings.csv  counterexamples.csv  final_conclusion.md  lawbook.json  thresholds.json  transfer_results.csv
examples/: igp24_synthetic_demo.py  run_v130_like_demo.py
real_out/: coordinate_report.json  counterexamples.csv  dataset.csv  holdout_report.json  holdout_report_stratified.json  lawbook.json  summary.md
src/latent_law/: __init__.py  benchmarks.py  (+12 more)
tests/: test_benchmarks.py  test_challenge.py  test_coordinates.py  test_counterexamples.py  test_discovery.py  test_end_to_end.py  test_etp_raw.py  test_features.py  test_laws.py  test_realdata.py
